--- a/Assets/UI Toolkit/EditorMenuVisualTree.uxml
+++ b/Assets/UI Toolkit/EditorMenuVisualTree.uxml
@@ -2,5 +2,7 @@
     <Style src="project://database/Assets/UI%20Toolkit/EditorMenuStyle.uss?fileID=7433441132597879392&amp;guid=21cc3e1fd9201f14c90185d9e0adcd37&amp;type=3#EditorMenuStyle" />
     <ui:VisualElement name="RightSidebar" class="right-sidebar" style="flex-grow: 1;">
         <ui:Button text="SOIL" parse-escape-sequences="true" display-tooltip-when-elided="true" name="soil" class="tile-cta" />
+        <ui:Button text="GRASS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="grass" class="tile-cta" />
+        <ui:Button text="WATER" parse-escape-sequences="true" display-tooltip-when-elided="true" name="water" class="tile-cta" />
     </ui:VisualElement>
 </ui:UXML>
